--- a/package.json
+++ b/package.json
@@ -5,16 +5,25 @@
   "main": "./dist/index.js",
   "scripts": {
     "start": "webpack-dev-server --config ./config/webpack.config.js --open",
-    "build": "webpack --config ./config/webpack.config.js"
+    "build": "webpack --config ./config/webpack.config.js",
+    "test": "jest ./test",
+    "test-watch": "jest --watch ./test"
   },
   "author": {
     "name": "Wren Kitchens"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.8",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^26.0.20",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.3",
     "css-loader": "^5.0.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^26.6.3",
+    "jest-transform-stub": "^2.0.0",
     "style-loader": "^2.0.0",
     "ts-loader": "^5.3.3",
     "typescript": "^3.3.4000",
