--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jest": "^26.6.3",
     "jest-transform-stub": "^2.0.0",
     "style-loader": "^2.0.0",
+    "ts-jest": "^26.5.3",
     "ts-loader": "^5.3.3",
     "typescript": "^3.3.4000",
     "webpack": "^4.29.6",
