--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.20",
+    "@types/jsdom": "^16.2.7",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.3",
     "css-loader": "^5.0.2",
@@ -24,6 +25,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^26.6.3",
     "jest-transform-stub": "^2.0.0",
+    "jsdom": "^15.1.0",
     "style-loader": "^2.0.0",
     "ts-jest": "^26.5.3",
     "ts-loader": "^5.3.3",
